feat: implement messaging service with DDD - Add domain entities and interfaces - Implement PostgreSQL repository - Add Redis cache adapter - Create webhook client - Setup scheduler - Configure Docker - Add API endpoints - Handle nullable fields - Fix SQL queries

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,8 @@ services:
       - POSTGRES_DB=messagingdb
     ports:
       - "5432:5432"
+    volumes:
+      - ./internal/infrastructure/persistance/postgres/migrations:/docker-entrypoint-initdb.d
     networks:
       - messaging-network
 
