added : unit tests, coverage script, multiple webhook client, container, logger

--- a/.env.dist
+++ b/.env.dist
@@ -14,8 +14,10 @@ REDIS_PORT=6379
 RABBITMQ_URL=amqp://guest:guest@localhost:5672/
 
 # Webhook
-WEBHOOK_URL=your_webhook_url
-WEBHOOK_TOKEN=your_webhook_token
+WEBHOOK_URL_ONE=https://webhook.site/ae17c131-349d-410b-8cc5-2f17c823ccca
+WEBHOOK_TOKEN_ONE=INS.me1x9uMcyYGlhKKQVPoc.bO3j9aZwRTOcA2Ywo
+WEBHOOK_URL_TWO=https://webhook2.example.com
+WEBHOOK_TOKEN_TWO=token2
 
 # Server
 SERVER_PORT=8080
